02.Chessboard/styles.css
:root {
  --background: rgb(252, 232, 174);
  --white-cell: rgb(252, 255, 237);
  --white-cell-selected: rgb(180, 209, 165);
  --black-cell: rgb(112, 158, 120);
  --black-cell-selected: rgb(81, 115, 88);
  --possible-move: rgb(0, 132, 184);
  --chessboard-border: rgb(112, 89, 50);
  --fen-background: rgb(234, 235, 230);
  --fen-copy-icon-hover: rgb(217, 219, 206);
  --fen-copy-icon-active: rgb(186, 186, 182);

  --pgn-table-border: var(--chessboard-border);
  --pgn-table-th: rgb(188, 232, 225);
  --pgn-table-td: rgb(214, 217, 197);
  --pgn-table-td-hover: rgb(171, 173, 160);
  --pgn-table-td-active: rgb(198, 201, 181);
}

* {
  box-sizing: border-box;
}

body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 20px 0;
  height: 100vh;
  border: 5px solid black;
  background-color: var(--background);
  margin: 0;
  padding: 1% 1%;
}

.chessboard {
  border: 2px solid var(--chessboard-border);
  aspect-ratio: 1;
  display: grid;
  grid-template-columns: repeat(8, 1fr);
  grid-template-rows: repeat(8, 1fr);
  align-items: center;
  justify-items: center;
  height: 100%;
}

.horizontal-container {
  display: flex;
  flex-grow: 1;
  justify-content: center;
  gap: 0 50px;
  overflow: hidden;
}

.controls {
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex: 0 0 20%;
  gap: 5% 5%;
}

.pgn-table-wrapper {
  overflow: auto;
  scrollbar-color: grey var(--pgn-table-td);
  border: 1px solid black;
  flex: 0 0 20%;
}

.chessboard div {
  width: 100%;
  height: 100%;
}

.chessboard .cell.white {
  background-color: var(--white-cell);
}

.chessboard .cell.white.selected {
  background-color: var(--white-cell-selected);
}

.chessboard .cell.black {
  background-color: var(--black-cell);
}

.chessboard .cell.black.selected {
  background-color: var(--black-cell-selected);
}

.chessboard .possible-move {
  width: 20%;
  height: 20%;
  border-radius: 50%;
  background-color: var(--possible-move);
  pointer-events: none;
  z-index: 999;
}

.king, .queen, .rook, .knight, .bishop, .pawn {
  z-index: 99;
  background-size: cover;
}

.king.black { background-image: url('./assets/pieces/black-king.png'); }
.king.white { background-image: url('./assets/pieces/white-king.png'); }
.queen.black { background-image: url('./assets/pieces/black-queen.png'); }
.queen.white { background-image: url('./assets/pieces/white-queen.png'); }
.rook.black { background-image: url('./assets/pieces/black-rook.png'); }
.rook.white { background-image: url('./assets/pieces/white-rook.png'); }
.bishop.black { background-image: url('./assets/pieces/black-bishop.png'); }
.bishop.white { background-image: url('./assets/pieces/white-bishop.png'); }
.knight.black { background-image: url('./assets/pieces/black-knight.png'); }
.knight.white { background-image: url('./assets/pieces/white-knight.png'); }
.pawn.black { background-image: url('./assets/pieces/black-pawn.png'); }
.pawn.white { background-image: url('./assets/pieces/white-pawn.png'); }

.pgn-table {
  table-layout: fixed;
  border-collapse: collapse;
  background-color: var(--pgn-table-td);
  width: 100%;
}

.pgn-table th, .pgn-table td {
  height: 2em;
}
.pgn-table th {
  width: 20%;
  font-style: italic;
  background-color: var(--pgn-table-th);
}
.pgn-table td {
  padding: 0 1em;
  width: 40%;
  cursor: pointer;
}

.pgn-table td:hover {
  background-color: var(--pgn-table-td-hover);
}
.pgn-table td.active {
  background-color: var(--pgn-table-td-active);
  font-weight: bold;
}

.fen-input-box {
  display: flex;
  flex: 0 0 2.5em;
  border: 1px solid var(--chessboard-border);
  border-radius: 5px;
  overflow: hidden;
  align-items: center;
  background-color: var(--fen-background);
  width: min(50em, 95%);
  align-self: center;
}

.fen-input-box > span {
  display: flex;
  align-items: center;
  padding: 0 1em;
  height: 100%;
}

.fen-input-box > input {
  padding: 0 5px;
  border: none;
  border-radius: 5px;
  height: 90%;
  width: 100%;
}

.fen-input-box > i {
  display: flex;
  align-items: center;
  padding: 0 0.6em;
  height: 100%;
  border-radius: 5px;
}

html {
  font-family: "Lato", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.controls button {
  font-family: "Lato", sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1.0em;
  padding: 1em 0.5em;
  border-radius: 5px;
  border: 1px solid var(--chessboard-border);
}

.fen-input-box > i:hover, .controls button:hover {
  background-color: var(--fen-copy-icon-hover);
}
.fen-input-box > i:active, .controls button:active {
  background-color: var(--fen-copy-icon-active);
}

.chessboard div *:hover {
  background-color: green;
}

@media (max-aspect-ratio: 5/5) {
.fen-input-box {
  display: none;
}

.horizontal-container {
  flex-direction: column;
  gap: 1%;
}

.pgn-table-wrapper {
  border: 0;
  flex: 1 0 20%;
}

.controls {
  flex-direction: row;
  flex: initial;
}

.chessboard {
  order: -1;
  height: auto;
  width: 100%;
}

}

